# MacAgent

./: .env.example  README.md  main.py  pyproject.toml  requirements.md
macagent/api/: dependencies.py  main.py
macagent/api/routers/: actions.py  analyze.py  sessions.py  users.py
macagent/core/: config.py  logger.py  models.py
macagent/database/: interface.py  mock_db.py  supabase_db.py
macagent/vlm/: action_executor.py  screen_capture.py  vlm_client.py
tests/: test_e2e.py
tests/test_api/: test_sessions_api.py  test_users_api.py
tests/test_database/: test_mock_db.py
tests/test_vlm/: test_action_executor.py  test_screen_capture.py  test_vlm_client.py
